web-infras/parser/tests/fixtures/babel/es2015/uncategorised/375/output.txt
[SyntaxError]: Unexpect keyword in property name. (1,16)
1|function foo({ enum }) {}
 |              ^
